# LabsCpp

./: .gitignore
task-0/: CMakeLists.txt  fileReader.cpp  fileReader.h  fileWriter.cpp  fileWriter.h  main.cpp  out.csv  sorting.cpp  sorting.h  splitString.cpp  splitString.h  statistics.cpp  statistics.h
task-0/tests/: main.cpp
task-1/: CMakeLists.txt  main.cpp  proxyTrit.cpp  proxyTrit.h  trit.cpp  trit.h  tritSet.cpp  tritSet.h
task-1/tests/: main.cpp
task-2/: CMakeLists.txt  block.cpp  block.h  dump.cpp  dump.h  execute.cpp  execute.h  exeption.h  fileReader.h  grep.cpp  grep.h  in.txt  main.cpp  readfile.cpp  readfile.h  replace.cpp  replace.h  sort.cpp  sort.h  splitString.cpp  splitString.h  worker.cpp  worker.h  workerFabric.cpp  workerFabric.h  workflow.txt  writefile.cpp  writefile.h
task-2/tests/: in.txt  main.cpp  workflow.txt
task-3/: CMakeLists.txt  consoleCamer.cpp  consoleGamer.h  consoleView.cpp  consoleView.h  gameProcess.cpp  gameProcess.h  gameView.h  gamer.h  main.cpp  optimalGamer.cpp  optimalGamer.h  randomGamer.cpp  randomGamer.h  ship.cpp  ship.h
